--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -30,5 +30,12 @@
   import "./engine/engine.js";
 </script>
 
+  <div id="game">
+  <div id="background"></div>
+
+  <div id="characters">
+    <!-- 角色立繪 -->
+  </div>
+    
 </body>
 </html>
