--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>AVG Project</title>
+<title>熱体艶夜</title>
 <link rel="stylesheet" href="ui/ui.css">
 </head>
 
