--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -15,27 +15,18 @@
     <img id="avatar-right" class="avatar right">
   </div>
 
-<div id="dialogue-box">
-  <div id="name-plate"></div>
-  <div id="dialogue-text"></div>
+  <div id="dialogue-box">
+    <div id="name-plate"></div>
+    <div id="dialogue-text"></div>
 
-  <button id="chapter-btn">章節</button>
-</div>
-
-<div id="chapter-menu" hidden></div>
-
-</div>
-
-<script type="module">
-  import "./engine/engine.js";
-</script>
-
-  <div id="game">
-  <div id="background"></div>
-
-  <div id="characters">
-    <!-- 角色立繪 -->
+    <button id="chapter-btn">章節</button>
   </div>
-    
+
+  <div id="chapter-menu" hidden></div>
+
+</div>
+
+<script type="module" src="./engine/engine.js"></script>
+
 </body>
 </html>
