--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>熱体艶夜</title>
 <link rel="stylesheet" href="ui/ui.css">
+<link rel="icon" type="image/png" href="IMG_5924.png">
+
 </head>
 
 <body>
