--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -12,12 +12,25 @@
 
 <div id="game-screen">
 
+  <button id="log-btn">紀錄</button>
+
+  <div id="log-window" hidden>
+    <div class="log-header">
+      <h2>LOG</h2>
+      <button id="close-log-btn">關閉</button>
+    </div>
+    <div id="log-content">
+      </div>
+  </div>
+  
   <div id="avatar-container">
     <img id="avatar-left" class="avatar left">
     <img id="avatar-right" class="avatar right">
   </div>
 
   <div id="dialogue-box">
+    <div id="back-btn">◀</div>
+    
     <div id="name-plate"></div>
     <div id="dialogue-text"></div>
 
