--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -12,7 +12,7 @@
 
 <div id="game-screen">
 
-  <button id="log-btn">紀錄</button>
+  <button id="log-btn">LOG</button>
 
   <div id="log-window" hidden>
     <div class="log-header">
