--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <title>熱体艶夜</title>
 <link rel="stylesheet" href="ui/ui.css">
-<link rel="icon" type="image/png" href="IMG_5924.png">
-
+<link rel="icon" type="image/png" href="icon.png">
 </head>
 
 <body>
@@ -33,8 +32,8 @@
     
     <div id="name-plate"></div>
     <div id="dialogue-text"></div>
-
   </div>
+
   <button id="chapter-btn">章節</button>
 
   <div id="chapter-menu" hidden></div>
