--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -28,10 +28,9 @@
   </div>
 
   <div id="dialogue-box">
-    <div id="back-btn">◀</div>
-    
-    <div id="name-plate"></div>
-    <div id="dialogue-text"></div>
+    <img id="back-btn" src="assets/ui/back.png" alt="返回上一頁">
+  <div id="name-plate"></div>
+  <div id="dialogue-text"></div>
   </div>
 
   <button id="chapter-btn">章節</button>
