--- a/SPLL_E110040/index.html
+++ b/SPLL_E110040/index.html
@@ -28,9 +28,10 @@
   </div>
 
   <div id="dialogue-box">
-    <img id="back-btn" src="assets/ui/back.png" alt="返回上一頁">
-  <div id="name-plate"></div>
-  <div id="dialogue-text"></div>
+    <div id="back-btn">◀</div>
+    
+    <div id="name-plate"></div>
+    <div id="dialogue-text"></div>
   </div>
 
   <button id="chapter-btn">章節</button>
