--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maple & Indigo - Wa Style</title>
+    <title>二羽//傾</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;700&family=Shippori+Mincho:wght@400;700&display=swap" rel="stylesheet">
     
     <style>
@@ -311,11 +311,11 @@
                     <div class="char-img-frame">
                         <img src="https://via.placeholder.com/200/b92e35/ffffff?text=Maple" alt="A" class="char-img">
                     </div>
-                    <div class="char-name-jp">楓城 蓮</div>
-                    <span class="char-role">赤の契り</span>
+                    <div class="char-name-jp">二羽　一夜</div>
+                    <span class="char-role">赤人</span>
                     <p class="char-text">
-                        如烈火般燃燒的武人。性格直率，但對特定的人有著笨拙的溫柔。<br>
-                        "只要這把刀還在，就不會讓任何人觸碰你。"
+                        如<br>
+                        ""
                     </p>
                 </div>
 
@@ -325,11 +325,11 @@
                     <div class="char-img-frame">
                         <img src="https://via.placeholder.com/200/2a2038/ffffff?text=Indigo" alt="B" class="char-img">
                     </div>
-                    <div class="char-name-jp">夜神 靜</div>
-                    <span class="char-role">紫の静寂</span>
+                    <div class="char-name-jp">久世　傾</div>
+                    <span class="char-role">紫の寂照</span>
                     <p class="char-text">
-                        掌管夜色的陰陽師。總是帶著捉摸不透的微笑，實際上佔有慾極強。<br>
-                        "這世間的紅葉，染上的皆是你的顏色。"
+                        掌。<br>
+                        "。"
                     </p>
                 </div>
             </div>
